assets/src/components/base/EditorWrapper/EditorWrapper.css
.editor-wrapper {
	border-radius: 20px;
	background-color: var(--bg-primary);
	box-shadow: var(--sl-shadow-small);
	border: 1px solid var(--sl-color-neutral-200);
}

.editor-wrapper * {
	font-family: var(--monospace-fonts) !important;
	font-size: 15px !important;
}

.editor-wrapper .codicon,
.editor-wrapper .codicon:before,
.editor-wrapper .codicon:after,
.editor-wrapper .codicon *,
.editor-wrapper .codicon *:before,
.editor-wrapper .codicon *:after {
	font-family: codicon !important;
}

.editor-wrapper .codicon.codicon-light-bulb {
	background-color: transparent !important;
}

.editor-wrapper__editor {
	padding: 20px 20px 20px 10px;
}

.editor-wrapper--hide-gutter .editor-wrapper__editor {
	padding: 20px 25px;
}

.editor-wrapper .decorationsOverviewRuler {
	border-radius: 5px;
}

.editor-wrapper .scrollbar .slider {
	border-radius: 5px;
}

.editor-wrapper .line-numbers {
	color: var(--sl-color-neutral-800) !important;
	opacity: 0.8;
	user-select: none;
	font-size: 16px !important;
}

.editor-wrapper .line-numbers.active-line-number {
	color: var(--sl-color-primary-600) !important;
	opacity: 1;
}

